# HR-Chatbot

./: .env.example  README.md  plan.md  pyproject.toml
app/: __init__.py  main.py
app/api/routes/: chat.py  health.py  ingest.py
app/core/: config.py  logging.py
app/db/: chroma_client.py
app/ingestion/: chunking.py  loaders.py  pipeline.py
app/models/: document.py
app/services/: __init__.py  chat_service.py  embedding_service.py  gemini_service.py  prompt_service.py  retrieval_service.py
data/chroma/: chroma.sqlite3
scripts/: ingest_documents.py
static/: app.js  index.html  styles.css
tests/: test_chunking.py  test_health.py
